--- a/partials/accueil/accueil.html
+++ b/partials/accueil/accueil.html
@@ -39,7 +39,7 @@
                     <article class="sport col-xs-4" id="judo">
                         <h2 class="text-center">Judo</h2>
                         <img class="discipline img-responsive" src="../../img/Judo.png" alt="">
-                        <button class="btn btn-primary center-block">En savoir plus</button>
+                        <button class="btn btn-primary center-block btn-sport">En savoir plus</button>
                         <div class="sport_detail">
                             <hr/>
                             <div class="row">
@@ -90,7 +90,7 @@ Dans le monde le judo est le troisième art martial le plus pratiqué derrière 
                     <article class="col-xs-4 sport" id="jujitsu">
                         <h2 class="text-center">Jujitsu</h2>
                         <img class="discipline img-responsive" src="../../img/JuJitsu.png" alt="">
-                        <button class="btn btn-primary center-block">En savoir plus</button>
+                        <button class="btn btn-primary center-block btn-sport">En savoir plus</button>
                         <div class="sport_detail">
                             <hr/>
                             <div class="row">
@@ -149,7 +149,7 @@ Le premier jutsu ryu reconnu fut formé par Takenouchie Hisamori en 1532 et cons
                     <article class="col-xs-4 sport" id="taiso">
                         <h2 class="text-center">Taiso</h2>
                         <img class="discipline img-responsive" src="../../img/Taiso.png" alt="">
-                        <button class="btn btn-primary center-block">En savoir plus</button>
+                        <button class="btn btn-primary center-block btn-sport">En savoir plus</button>
                         <div class="sport_detail">
                             <hr/>
                             <div class="row">
@@ -225,7 +225,7 @@ En France, le Taïso est affilié à la Fédération Française de Judo Jujitsu 
             </div>
         </div>
         <div class="center-block">
-            <button class="btn btn-primary center-block">Voir plus de news</button>
+            <button id="news_btn" class="btn btn-primary center-block"><a href="#news">Voir plus de news</a></button>
         </div>
     </div>
 
