amelioration de la mise en page

--- a/partials/inscription/Inscription_Tarifs.html
+++ b/partials/inscription/Inscription_Tarifs.html
@@ -51,7 +51,7 @@
                 </tr>
                 </tbody>
             </table><!-- end table -->
-        </div><br /><br/ ><!-- end table responsive -->
+        </div><br /><br><!-- end table responsive -->
     </div><!-- end container center block -->
 
 
@@ -80,17 +80,6 @@
         </div><!-- end inscription right -->
     </div><!-- end row -->
 
-    <div class="row">
-        <div class="footer">
-            <div class="col-xs-4">
-            </div>
-            <div class="col-xs-4">
-            <p>&copy; 2016, Dojo Beauceron, tous droits réservés</p>
-            </div>
-            <div class="col-xs-4">
-            <a href="#">Mentions légales</a>
-            </div>
-        </div>
-    </div>
+
 
 </div>
