--- a/partials/documents/documents.html
+++ b/partials/documents/documents.html
@@ -50,8 +50,14 @@
                     <!--item-->
                 </div>
                 <!--/CarouselInner-->
-                <a class="left carousel-control" href="#myCarousel" data-slide="prev"></a>
-                <a class="right carousel-control" href="#myCarousel" data-slide="next"></a>
+                <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+                    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="right carousel-control" href="#myCarousel" data-slide="next">
+                    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
             </div>
             <!--/myCarousel-->
         </div>
