--- a/partials/common/navigation.html
+++ b/partials/common/navigation.html
@@ -3,7 +3,7 @@
         <!-- Brand and toggle get grouped for better mobile display -->
 
         <div class="navbar-header"> <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-            <img alt="Brand" class="pull-left" src="../../img/logo.png">
+            <img alt="Brand" class="pull-left" id="logo_img" src="../../img/logo.png">
             <a ng-click="tab = 1" class="navbar-brand" id="title_logo" href="#accueil">Dojo Beauceron</a>
         </div>
 
