--- a/partials/horaires/horaires.html
+++ b/partials/horaires/horaires.html
@@ -7,17 +7,32 @@
     <title>Horaires</title>
     <link rel="stylesheet" href="../../css/vendor/timetable/timetablejs.css">
     <link rel="stylesheet" href="../../css/stylesheet.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   </head>
   <body>
 
     <div class="hero-unit">
       <h1>Horaires 2016/2017</h1>
-      <p>Dojo</p>
     </div>
 
-    <div class="timetable"></div>
-    <div class="timetable1"></div>
+<div class="container">
+  <h3>Choisir le dojo</h3>
+  <ul class="nav nav-pills">
+    <li class="active"><a data-toggle="pill" href="#mainvilliers">Mainvilliers</a></li>
+    <li><a data-toggle="pill" href="#madeleine">La Madeleine</a></li>
+    <li><a data-toggle="pill" href="#fontaine">Fontaine la Guyon</a></li>
+  </ul>
+  
+  <div class="tab-content">
+    <div class="timetable" id="mainvilliers" class="tab-pane fade in active"></div>
+    <div class="timetable1" id="madeleine" class="tab-pane fade"></div>
+    <div class="timetable2" id="fontaine" class="tab-pane fade"></div>
+</div>
+</div>
+
     <script src="../../js/vendor/jquery/jquery.js"></script>
+
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="../../js/vendor/timetable/timetable.js"></script>
 
     <script>
@@ -27,18 +42,18 @@
 
       timetable.addLocations(['Lundi', 'Mardi', 'Mercredi', 'Jeudi', 'Vendredi', 'Samedi']);
 
-      timetable.addEvent('Né entre 2002 et 2008', 'Lundi', new Date(2015,7,17,18,15), new Date(2015,7,17,19,30), { url: '#' });
+      timetable.addEvent('Né entre 2002 et 2008', 'Lundi', new Date(2015,7,17,18,15), new Date(2015,7,17,19,30));
       timetable.addEvent('Né en 2001 et avant - Physique', 'Lundi', new Date(2015,7,17,19,30), new Date(2015,7,17,21,00)); // options attribute is not used for this event
-      timetable.addEvent('Baby Judo 2012/2011', 'Mardi', new Date(2015,7,17,17,30), new Date(2015,7,17,18,15), { url: '#' });
-      timetable.addEvent('Minimes Cadets', 'Mardi', new Date(2015,7,17,18,15), new Date(2015,7,17,19,30), { url: '#' });
-      timetable.addEvent('Né en 2001 et avant - Techniques', 'Mardi', new Date(2015,7,17,19,45), new Date(2015,7,17,21,15), { url: '#' });
-      timetable.addEvent('Né en 2009/2010', 'Mercredi', new Date(2015,7,17,16,00), new Date(2015,7,17,17,00), { url: '#' });
-      timetable.addEvent('Né en 2007/2008', 'Mercredi', new Date(2015,7,17,17,00), new Date(2015,7,17,18,00), { url: '#' });
-      timetable.addEvent('Né en 2002 à 2006', 'Mercredi', new Date(2015,7,17,17,00), new Date(2015,7,17,19,30), { url: '#' });
+      timetable.addEvent('Baby Judo 2012/2011', 'Mardi', new Date(2015,7,17,17,30), new Date(2015,7,17,18,15));
+      timetable.addEvent('Minimes Cadets', 'Mardi', new Date(2015,7,17,18,15), new Date(2015,7,17,19,30));
+      timetable.addEvent('Né en 2001 et avant - Techniques', 'Mardi', new Date(2015,7,17,19,45), new Date(2015,7,17,21,15));
+      timetable.addEvent('Né en 2009/2010', 'Mercredi', new Date(2015,7,17,16,00), new Date(2015,7,17,17,00));
+      timetable.addEvent('Né en 2007/2008', 'Mercredi', new Date(2015,7,17,17,00), new Date(2015,7,17,18,00));
+      timetable.addEvent('Né en 2002 à 2006', 'Mercredi', new Date(2015,7,17,17,00), new Date(2015,7,17,19,30));
       
       timetable.addEvent('Né en 2001 et avant', 'Vendredi', new Date(2015,7,17,20,00), new Date(2015,7,17,21,30)); // options attribute is not used for this event
 
-      timetable.addEvent('Cours à thème - Jeunes ou adultes', 'Samedi', new Date(2015,7,17,10,00), new Date(2015,7,17,11,30), { class: 'vip-only' });
+      timetable.addEvent('Cours à thème - Jeunes ou adultes', 'Samedi', new Date(2015,7,17,10,00), new Date(2015,7,17,11,30));
 
       var renderer = new Timetable.Renderer(timetable);
       renderer.draw('.timetable');
@@ -47,26 +62,38 @@
 
       var timetable1 = new Timetable();
 
-      timetable1.setScope(10,22);
+      timetable1.setScope(14,23);
 
       timetable1.addLocations(['Lundi', 'Mardi', 'Mercredi', 'Jeudi', 'Vendredi', 'Samedi']);
 
-      timetable1.addEvent('Né entre 2002 et 2008', 'Lundi', new Date(2015,7,17,18,15), new Date(2015,7,17,19,30), { url: '#' });
-      timetable1.addEvent('Né en 2001 et avant - Physique', 'Lundi', new Date(2015,7,17,19,30), new Date(2015,7,17,21,00)); // options attribute is not used for this event
-      timetable1.addEvent('Baby Judo 2012/2011', 'Mardi', new Date(2015,7,17,17,30), new Date(2015,7,17,18,15), { url: '#' });
-      timetable1.addEvent('Minimes Cadets', 'Mardi', new Date(2015,7,17,18,15), new Date(2015,7,17,19,30), { url: '#' });
-      timetable1.addEvent('Né en 2001 et avant - Techniques', 'Mardi', new Date(2015,7,17,19,45), new Date(2015,7,17,21,15), { url: '#' });
-      timetable1.addEvent('Né en 2009/2010', 'Mercredi', new Date(2015,7,17,16,00), new Date(2015,7,17,17,00), { url: '#' });
-      timetable1.addEvent('Né en 2007/2008', 'Mercredi', new Date(2015,7,17,17,00), new Date(2015,7,17,18,00), { url: '#' });
-      timetable1.addEvent('Né en 2002 à 2006', 'Mercredi', new Date(2015,7,17,17,00), new Date(2015,7,17,19,30), { url: '#' });
+      timetable1.addEvent('Né entre 2007 et 2010', 'Lundi', new Date(2015,7,17,18,15), new Date(2015,7,17,19,15));
+      timetable1.addEvent('Né entre 2002 et 2006', 'Lundi', new Date(2015,7,17,19,15), new Date(2015,7,17,20,30)); // options attribute is not used for this event
+      timetable1.addEvent('Taïso', 'Lundi', new Date(2015,7,17,20,30), new Date(2015,7,17,22,15));
 
-      timetable1.addEvent('Né en 2001 et avant', 'Vendredi', new Date(2015,7,17,20,00), new Date(2015,7,17,21,30)); // options attribute is not used for this event
+      timetable1.addEvent('Baby Judo 2012/2011', 'Mercredi', new Date(2015,7,17,15,00), new Date(2015,7,17,15,45));
+      timetable1.addEvent('Né entre 2007 et 2010', 'Mercredi', new Date(2015,7,17,15,45), new Date(2015,7,17,16,45));
 
-      timetable1.addEvent('Cours à thème - Jeunes ou adultes', 'Samedi', new Date(2015,7,17,10,00), new Date(2015,7,17,11,30), { class: 'vip-only' });
+      timetable1.addEvent('Né entre 2002 et 2006', 'Vendredi', new Date(2015,7,17,17,30), new Date(2015,7,17,19,00)); // options attribute is not used for this event
 
       var renderer = new Timetable.Renderer(timetable1);
       renderer.draw('.timetable1');
-    </script>
 
+  /* THIRD Planning */
+
+      var timetable2 = new Timetable();
+
+      timetable2.setScope(14,23);
+
+      timetable2.addLocations(['Lundi', 'Mardi', 'Mercredi', 'Jeudi', 'Vendredi']);
+
+      timetable2.addEvent('Né entre 2010 et 2012', 'Jeudi', new Date(2015,7,17,16,45), new Date(2015,7,17,17,30));
+
+      timetable2.addEvent('Né en 2009, 2008 et avant', 'Jeudi', new Date(2015,7,17,17,30), new Date(2015,7,17,18,30));
+
+      var renderer = new Timetable.Renderer(timetable2);
+      renderer.draw('.timetable2');
+
+    </script>
+</div>
 </body>
 </html>
