--- a/partials/calendrier/calendrier.html
+++ b/partials/calendrier/calendrier.html
@@ -6,6 +6,26 @@
     </div>
 </div>
 
+<!-- LEGENDE -->
+
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-xs-3">
+        </div>
+        <div class="col-xs-2">
+            <div id="cal_legende1" class="cal_legende">Compétitions</div>
+        </div>
+        <div class="col-xs-2">
+            <div id="cal_legende2" class="cal_legende">Réunions</div>
+        </div>
+        <div class="col-xs-2">
+            <div id="cal_legende3" class="cal_legende">Divers</div>
+        </div>
+        <div class="col-xs-3">
+        </div>
+    </div>
+</div>
+
 <!-- CALENDRIER -->
 
 <div class="container-fluid">
