--- a/partials/horaires/horaires.html
+++ b/partials/horaires/horaires.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Horaires</title>
     <link rel="stylesheet" href="../../css/vendor/timetable/timetablejs.css">
-    <link rel="stylesheet" href="../../css/stylesheet.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../../css/stylesheet.css">
   </head>
   <body>
 
@@ -24,9 +24,9 @@
   </ul>
   
   <div class="tab-content">
-    <div class="timetable" id="mainvilliers" class="tab-pane fade in active"></div>
-    <div class="timetable1" id="madeleine" class="tab-pane fade"></div>
-    <div class="timetable2" id="fontaine" class="tab-pane fade"></div>
+    <div class="timetable tab-pane fade in active" id="mainvilliers"></div>
+    <div class="timetable1 tab-pane fade" id="madeleine"></div>
+    <div class="timetable2 tab-pane fade" id="fontaine"></div>
 </div>
 </div>
 
