--- a/partials/accueil/accueil.html
+++ b/partials/accueil/accueil.html
@@ -225,7 +225,7 @@ En France, le Taïso est affilié à la Fédération Française de Judo Jujitsu 
             </div>
         </div>
         <div class="center-block">
-            <button id="news_btn" class="btn btn-primary center-block"><a href="#news">Voir plus de news</a></button>
+            <button id="news_btn" class="btn btn-primary center-block"><a class="btnews"href="#news">Voir plus de news</a></button>
         </div>
     </div>
 
