--- a/partials/documents/documents.html
+++ b/partials/documents/documents.html
@@ -14,7 +14,7 @@
     <div class="well">
         <div class="col-xs-12">
             <h1>Documents à télécharger</h1></div>
-        <div id="myCarousel" class="carousel slide" data-pause="null">
+        <div id="myCarousel" class="carousel slide">
             <!-- Carousel items -->
             <div class="carousel-inner">
                 <div class="item active">
