travail sur les resultats

--- a/partials/resultats/phototheque-resultats.html
+++ b/partials/resultats/phototheque-resultats.html
@@ -21,6 +21,7 @@
                     <div class="caption">
                         <p>Le podium</p>
                         <img src="{{photos.images}}" alt="" class="responsive">
+                        <img src="{{photos.imgDescr}}" alt="">
                         <p class="alert alert-info">{{photos.description}}</p>
 
                         <button type="button" class="btn btn-default" data-dismiss="modal"><span
