--- a/partials/inscription/Inscription_Tarifs.html
+++ b/partials/inscription/Inscription_Tarifs.html
@@ -60,7 +60,7 @@
 
             <p class="lead">Pour information , les adultes peuvent s’inscrire dès maintenant pendant les cours auprès de Magalie sur le dojo de Mainvilliers.</p><br />
 
-            <p><a href="../../Documents/Tarif.pdf" target ="_blank">Cliquer ici pour consulter le tarif 2016/2017.</a></p><br />
+            <p><a href="../../documents/Tarif.pdf" target ="_blank">Cliquer ici pour consulter le tarif 2016/2017.</a></p><br />
 
             <p>Ces inscriptions courant semaine prochaine vous permettront de monter sur le tatamis dès les premiers cours.</p>
 
@@ -70,11 +70,11 @@
         <div class="col-xs-5 col-xs-offset-1 thumbnail inscr">
             <p>Afin de préparer la rentrée prochaine, voici quelques documents à remplir pour anticiper :</p><br /><br />
 
-            <p><a href="../../Documents/Certificat_medical.pdf" target="_blank">Certificat médical</a></p>
-            <p><a href="../../Documents/notice_demande_de_renouvellement_licence_ffjda_septembre2015.pdf" target="_blank">Notice demande renouvellement licence</a></p>
-            <p><a href="../../Documents/Autorisation_permanente.pdf" target="_blank">Autorisation permanente</a></p>
+            <p><a href="../../documents/Certificat_medical.pdf" target="_blank">Certificat médical</a></p>
+            <p><a href="../../documents/notice_demande_de_renouvellement_licence_ffjda_septembre2015.pdf" target="_blank">Notice demande renouvellement licence</a></p>
+            <p><a href="../../documents/Autorisation_permanente.pdf" target="_blank">Autorisation permanente</a></p>
             <p><a href="../../Documents/Autorisation_photo.pdf" target="_blank">Autorisation de photo/vidéo</a></p>
-            <p><a href="../../Documents/Autorisation_test_anti_dopage.pdf" target="_blank"></a></p><br /><br />
+            <p><a href="../../documents/Autorisation_test_anti_dopage.pdf" target="_blank"></a></p><br /><br />
 
             <p>Etant donné qu’il nous faut un délai pour valider les inscriptions auprès de FFJDA, vous ne pourrez monter sur le Tatamis que 7 jours après la remise du dossier complet.</p>
         </div><!-- end inscription right -->
