--- a/partials/inscription/Inscription_Tarifs.html
+++ b/partials/inscription/Inscription_Tarifs.html
@@ -74,7 +74,7 @@
             <p><a href="../../documents/notice_demande_de_renouvellement_licence_ffjda_septembre2015.pdf" target="_blank">Notice demande renouvellement licence</a></p>
             <p><a href="../../documents/Autorisation_permanente.pdf" target="_blank">Autorisation permanente</a></p>
             <p><a href="../../Documents/Autorisation_photo.pdf" target="_blank">Autorisation de photo/vidéo</a></p>
-            <p><a href="../../documents/Autorisation_test_anti_dopage.pdf" target="_blank"></a></p><br /><br />
+            <p><a href="../../documents/Autorisation_test_anti_dopage.pdf" target="_blank">Autorisation Test anti-dopage</a></p><br /><br />
 
             <p>Etant donné qu’il nous faut un délai pour valider les inscriptions auprès de FFJDA, vous ne pourrez monter sur le Tatamis que 7 jours après la remise du dossier complet.</p>
         </div><!-- end inscription right -->
