--- a/partials/resultats/phototheque-resultats.html
+++ b/partials/resultats/phototheque-resultats.html
@@ -19,10 +19,9 @@
                     </h2>
 
                     <div class="caption">
-                        <p>Le podium</p>
-                        <img src="{{photos.images}}" alt="" class="responsive">
+                        <img src="{{photos.images}}" alt="" class="responsive modale_photo">
                         <!-- <img src="{{photos.description}}" alt=""> -->
-                        <p class="alert alert-info">{{photos.description}}</p>
+                        <p class="alert alert-info" ng-bind-html="photos.description"></p>
 
                         <button type="button" class="btn btn-default" data-dismiss="modal"><span
                                 class="glyphicon glyphicon-remove" aria-hidden="true"> Fermer</span></button>
