--- a/partials/contact/contact.html
+++ b/partials/contact/contact.html
@@ -74,7 +74,7 @@
     </div>
   </div>
 </div>
-
+<script type="text/javascript-lazy" src="../../js/map.js"></script>
 <script>
 $('#map').click(function(){
   $(this).popover('hide');
