--- a/partials/news/news.html
+++ b/partials/news/news.html
@@ -10,7 +10,7 @@
 				<a href='' data-toggle="modal" data-target="{{'#myModal'+$index}}" style="text-decoration:underline;">{{news.lien}}</a>
 			</div>
 		</div>
-		<div class="modal fade" ng-repeat="news in newslist" id="{{'myModal'+$index}}" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+		<div class="formContact modal fade" style='margin-top:20px;' ng-repeat="news in newslist" id="{{'myModal'+$index}}" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
 			<div class="well modal-content col-md-4 col-md-offset-4">
 				<div class="modal-header" style="padding:0;">
 					<img src="{{news.img}}" class="img-responsive">
