--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -192,14 +192,17 @@ form [title="selecteurs"]
 }
 
 .results_frame{
-	min-height: 350px;
+	min-height: 380px;
 	display: flex;
     flex-direction: column;
     justify-content: center;
 }
 
 .modale_photo{
+	margin-top: 2%;
 	margin-bottom: 2%;
+	margin-left: 1%;
+	margin-right: 1%;
 }
 
 /* FIN RESULTATS */
