--- a/partials/resultats/phototheque-resultats.html
+++ b/partials/resultats/phototheque-resultats.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-xs-6 col-sm-4 col-md-3" ng-repeat="photos in resultat.podium">
         <div class="thumbnail text-center results_frame">
-            <img src="{{photos.images}}" alt="" class="responsive">
+            <img ng-src="{{photos.images[0]}}" alt="" class="responsive">
             <div class="caption">
                 <p>{{photos.title}}</p>
                 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="{{'.result1'+$index}}"><span
@@ -19,7 +19,7 @@
                     </h2>
 
                     <div class="caption">
-                        <img src="{{photos.images}}" alt="" class="responsive modale_photo">
+                        <img ng-repeat="img in photos.images" ng-src="{{img}}" alt="" class="responsive modale_photo">
                         <!-- <img src="{{photos.description}}" alt=""> -->
                         <p class="alert alert-info" ng-bind-html="photos.description"></p>
 
