--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -29,7 +29,7 @@ body
 	font-size: 3rem;
     margin-top: 4rem;
     margin-left: 1rem;
-	color:#2e81fa;
+	color:#1177bb;
 }
 
 #navbar ul > li{
@@ -51,7 +51,7 @@ color:black;
 
 .dropdown-menu > li > a:focus, .dropdown-menu > li > a:hover {
     color: #fafafa;
-    background-color: #2e81fa;
+    background-color: #1177bb;
 }
 
 .navbar.navbar-default {
@@ -59,14 +59,14 @@ color:black;
 }
 
 .navbar-default:hover .navbar-nav:hover > .active:hover > a, .navbar-default:hover .navbar-nav:hover > .active:hover > a:focus, .navbar-default:hover .navbar-nav:hover > .active:hover > a:hover {
-	background-color: #3FA3D7;
+	background-color: #1177bb;
 	color:#fff;
 }
 
 /* au hover on change la couleur de l'actif en bleu */
 
 .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:focus, .navbar-default .navbar-nav > .active > a:hover {
-	background-color: #2e81fa;
+	background-color: #0D5F95;
     color: #fafafa;
 	height:9.2rem;
 }
@@ -82,7 +82,7 @@ color:black;
 
 .navbar-default:hover .navbar-nav:hover > li:hover > a, .navbar-inverse:hover .navbar-text:hover {
 	color: #fafafa;
-    background-color: #2e81fa;
+    background-color: #0D5F95;
 }
 
 /* couleur de la navbar au hover */
@@ -98,7 +98,7 @@ ul > li {
 
 /* slider */
 
- .carousel-inner > .item > img {
+.carousel-inner > .item > img {
 	width: 100%;
 	height:500px;
  }
@@ -132,9 +132,9 @@ ul > li {
 }
 
 .cap{
-	border:1px solid #2e81fa;
+	border:1px solid #1177bb;
 	text-align: center;
-	background-color: rgba(46, 129, 250, 0.8);
+	background-color: #70add6;
 }
 
 .footer{
@@ -160,7 +160,7 @@ ul > li {
 }
 
 .btn-primary{
-	background-color: #2e81fa;
+	background-color: #1177bb;
 }
 
 /* RESULTATS */
@@ -229,7 +229,7 @@ h2 {
 	color:#5a5a5a;
 }
 h3 {
-	color:#2e81fa;
+	color:#1177bb;
 }
 
 .col1 {
@@ -322,7 +322,7 @@ p {
 }
 
 h1 {
-	color:#2e81fa;
+	color:#1177bb;
 	text-align: center;
 	font-weight: bold;
 	margin-bottom: 50px;
@@ -344,7 +344,7 @@ h1 {
 }
 
 .btn-primary {
-	background-color: #3FA3D7;
+	background-color: #1177bb;
 }
 /* RESPONSIVE */
 
@@ -468,7 +468,7 @@ th{
 }
 
 #map:hover {
-    border:1px solid #2e81fa;
+    border:1px solid #1177bb;
 }
 
 .padreset {
@@ -480,7 +480,7 @@ th{
 }
 
 .popover.top{
-	border: 1px solid #2e81fa;
+	border: 1px solid #1177bb;
 	font-family: inherit;
 animation: pulse 5s infinite ease-in-out;
 border-radius: 0;
