--- a/partials/resultats/select-sexe.html
+++ b/partials/resultats/select-sexe.html
@@ -1,10 +1,8 @@
 <div class="col-xs-2 text-center">
     <form method="post" action="resultats.html">
             <label for="sexe">Catégorie H/F</label><br />
-            <select name="sexe" id="sexe" title="selecteurs">
-                <option value="Tous">Tous</option>
-                <option value="Homme">Homme</option>
-                <option value="Femme">Femme</option>
+            <select ng-model="genre" ng-init="genre='Tous'" name="sexe" id="sexe" title="selecteurs">
+                <option ng-repeat="gender in resultat.genders" value="{{gender.sexe}}">{{gender.sexe}}</option>
             </select>
     </form>
 </div>
