--- a/partials/contact/contact.html
+++ b/partials/contact/contact.html
@@ -3,15 +3,9 @@
   <div class="row ">
 
     <!-- Button trigger modal -->
-    <div class="btn-group col-md-offset-5">
-      <button type="button" class="btn btn-success btn-lg dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        Nous contacter ! <span class="caret"></span>
-      </button>
-      <ul class="dropdown-menu" style="width:100%;">
-        <li><a data-toggle="modal" data-target="#myModal" style="cursor:pointer;">Via le site</a></li>
-        <li role="separator" class="divider"></li>
-        <li><a href="#">Vous même</a></li>
-      </ul>
+    <div class="col-md-offset-5">
+<!--       <button type="button" class="btn btn-default btn-lg"><a class="btnContact" data-toggle="modal" data-target="#myModal" style="cursor:pointer;">Nous-contacter !</a></button> -->
+<a class="btnContact btn btn-default btn-lg" data-toggle="modal" data-target="#myModal" style="cursor:pointer;">Nous-contacter !</a>
     </div>
   </br></br>
 
