--- a/partials/horaires/horaires.html
+++ b/partials/horaires/horaires.html
@@ -2,7 +2,7 @@
    <!-- <link rel="stylesheet" href="../../css/vendor/timetable/timetablejs.css">-->
 
 
-    <div class="hero-unit">
+    <div class="hero-unit title_horaires">
       <h1>Horaires 2016/2017</h1>
     </div>
 
