--- a/partials/inscription/Inscription_Tarifs.html
+++ b/partials/inscription/Inscription_Tarifs.html
@@ -2,7 +2,7 @@
 
     <div class="row">
         <div class="col-xs-12">
-            <h2 class="text-center">Rentrée 2016</h2>
+            <h1 class="text-center title_inscription">Rentrée 2016</h1>
         </div>
     </div><!-- end row -->
 
