--- a/partials/resultats/resultats.html
+++ b/partials/resultats/resultats.html
@@ -1,7 +1,7 @@
 <div class="container-fluid" ng-repeat="resultat in resultats">
 
     <div class="row titre_page">
-        <div class="col-xs-12"><h2><span class="glyphicon glyphicon-stats" aria-hidden="true"></span> Résultats</h2>
+        <div class="col-xs-12"><h1></span> Résultats</h1>
         </div>
     </div>
 
