modifs rxmat et caption

--- a/partials/accueil/disciplines.html
+++ b/partials/accueil/disciplines.html
@@ -1,52 +1,9 @@
-
-<!-- <script type="text/javascript" src="/js/vendor/dot/jquery.dotdotdot.min.js"></script>
-<script type="text/javascript" src="/js/vendor/nivo_slider/jquery.nivo.slider.pack.js"></script>-->
-<!-- <script type="text/javascript" src="/js/script.js"></script> -->
-
-
-<!-- slide -->
-<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-    <!-- Indicators -->
-    <ol class="carousel-indicators hidden-xs">
-        <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-        <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-        <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-    </ol>
-
-    <!-- Wrapper for slides -->
-    <div class="carousel-inner" role="listbox">
-        <div class="item active">
-            <img class="img-responsive" src="../../img/carrousel1.jpg" alt="">
-        </div>
-        <div class="item">
-            <img class="img-responsive" src="../../img/carrousel2.jpg" alt="">
-        </div>
-        <div class="item">
-            <img class="img-responsive" src="../../img/carrousel3.jpg" alt="">
-        </div>
-
-    </div>
-
-    <!-- Controls -->
-    <a target="_self" class="left carousel-control hidden-xs" href="#carousel-example-generic" role="button" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-    </a>
-    <a target="_self" class="right carousel-control hidden-xs" href="#carousel-example-generic" role="button" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-    </a>
-</div>
-
-<!-- discipline -->
-
            <div class="container">
                 <div class="row">
-
                     <article class="sport col-xs-4" id="judo">
                         <h2 class="text-center">Judo</h2>
                         <img class="discipline img-responsive" src="../../img/Judo.png" alt="">
-                        <button class="btn btn-primary center-block btn-sport">En savoir plus</button>
+                        <button class="btn btn-primary center-block">En savoir plus</button>
                         <div class="sport_detail">
                             <hr/>
                             <div class="row">
@@ -83,7 +40,7 @@ Le judo commence à être enseigné au Japon en 1882 au Kodokan, en France dès 
 
 Moshe Feldenkrais crée le Jujitsu-Club de France, puis la Fédération française de judo est fondée en 1946. C’est aussi à cette époque que se développera le côté sportif et qu’apparaitront les premières compétitions. Le nombre de pratiquants de par le monde s’accroît alors considérablement.
 
-Le judo est la discipline la plus pratiquée en France, devant le Karaté et l’Aïkido. Il est devenu officiellement discipline olympique lors des Jeux de Tôkyô en 1964. Le judo féminin a fait son entrée dans le programme olympique aux Jeux de Séoul en 1988 comme sport de démonstration avant d’être définitivement accepté à partir des Jeux de Barcelone en 1992.
+Le judo est la discipline la plus pratiquée en France, devant le Karaté et l’Aïkido. Il est devenu officiellement discipline olympique lors des Jeux de Tôkyô en 1964. Le judo féminin a fait son entrée dans le programme olympique aux Jeux de Séoul en 1988 comme sport de démonstration avant d’être définitivement accepté à partir des Jeux de Barcelone en 1992. 
 
 Dans le monde le judo est le troisième art martial le plus pratiqué derrière le karaté et le taekwondo avec 8 millions de pratiquants.
 
@@ -97,7 +54,7 @@ Dans le monde le judo est le troisième art martial le plus pratiqué derrière 
                     <article class="col-xs-4 sport" id="jujitsu">
                         <h2 class="text-center">Jujitsu</h2>
                         <img class="discipline img-responsive" src="../../img/JuJitsu.png" alt="">
-                        <button class="btn btn-primary center-block btn-sport">En savoir plus</button>
+                        <button class="btn btn-primary center-block">En savoir plus</button>
                         <div class="sport_detail">
                             <hr/>
                             <div class="row">
@@ -156,7 +113,7 @@ Le premier jutsu ryu reconnu fut formé par Takenouchie Hisamori en 1532 et cons
                     <article class="col-xs-4 sport" id="taiso">
                         <h2 class="text-center">Taiso</h2>
                         <img class="discipline img-responsive" src="../../img/Taiso.png" alt="">
-                        <button class="btn btn-primary center-block btn-sport">En savoir plus</button>
+                        <button class="btn btn-primary center-block">En savoir plus</button>
                         <div class="sport_detail">
                             <hr/>
                             <div class="row">
@@ -202,38 +159,3 @@ En France, le Taïso est affilié à la Fédération Française de Judo Jujitsu 
                 </div><!-- end row -->
                 <div class="row-detail"></div>
             </div><!-- end container -->
-
-
-<div class="container">
-    <div class="row" id="news"></div>
-</div>
-
-<!-- news-->
-
-<div class="col-xs-4">
-            <div class="thumbnail text-center">
-                <h2>News</h2>
-                <p class="article dot-ellipsis">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores dolore, qui veniam explicabo, sint inventore tempora iusto similique repellendus porro nulla necessitatibus dignissimos nemo, aperiam facilis. Aperiam voluptatum recusandae ducimus.</p>
-            </div>
-        </div>
-
-        <div class="col-xs-4">
-            <div class="thumbnail text-center">
-                <h2>News</h2>
-                <p class="article dot-ellipsis">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores dolore, qui veniam explicabo, sint inventore tempora iusto similique repellendus porro nulla necessitatibus dignissimos nemo, aperiam facilis. Aperiam voluptatum recusandae ducimus.</p>
-            </div>
-        </div>
-
-        <div class="col-xs-4">
-            <div class="thumbnail text-center">
-                <h2>News</h2>
-                <p class="article dot-ellipsis">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores dolore, qui veniam explicabo, sint inventore tempora iusto similique repellendus porro nulla necessitatibus dignissimos nemo, aperiam facilis. Aperiam voluptatum recusandae ducimus.
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde in earum cum reiciendis vero a, autem velit? Sed soluta suscipit quos, quia minima deserunt labore nisi, esse non debitis illo.</p>
-            </div>
-        </div>
-        <div class="center-block">
-            <button id="news_btn" class="btn btn-primary center-block"><a class="btnews" href="#news">Voir plus de news</a></button>
-        </div>
-    </div>
-
-</div>
