--- a/partials/mentions/mentions.html
+++ b/partials/mentions/mentions.html
@@ -1,7 +1,7 @@
 <div ng-controller="mentionsController as mentionsCtrl" class="container-fluid">
 
     <div class="row titre_page">
-        <div class="col-xs-12"><h1>Mentions légales</h1></div>
+        <div class="col-xs-12"><h2><span class="glyphicon glyphicon-bookmark" aria-hidden="true"></span> Mentions légales</h2></div>
     </div>
 
     <div class="row">
