--- a/partials/contact/contact.html
+++ b/partials/contact/contact.html
@@ -181,7 +181,7 @@ $('#map').click(function(){
 });
 $('.max').css('height', '100px');
 $('#attributeForm').bootstrapValidator();
-$('.btn-success').animateCss('flipInX');
+$('.btnContact').animateCss('flipInX');
 $('.alert-success').css('display','none');
 $('.control-label').css('display','none');
 $('.dojoCH').css('display','none');
