--- a/partials/common/navigation.html
+++ b/partials/common/navigation.html
@@ -1,10 +1,10 @@
-<nav class="navbar navbar-default" ng-init="tab = 1">
+<nav class="navbar navbar-default">
     <div class="container-fluid" ng-controller="PannelController as pannel">
         <!-- Brand and toggle get grouped for better mobile display -->
 
         <div class="navbar-header"> <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
             <img alt="Brand" class="pull-left" id="logo_img" src="../../img/logo.png">
-            <a ng-click="tab = 1" class="navbar-brand" id="title_logo" href="#accueil">Dojo Beauceron</a>
+            <a ng-class="{active:isActive('/accueil')}" class="navbar-brand" id="title_logo" href="#accueil">Dojo Beauceron</a>
         </div>
 
         <!-- ng-click="selectionLien(accueil)" ng-class="{ active: link == accueil}" -->
@@ -12,21 +12,20 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="navbar">
             <ul class="nav navbar-nav pull-right">
-                <li ng-class="{active:tab === 1 }"><a href="#accueil" ng-click="tab = 1">Accueil</a></li>
-                <li ng-class="{active:tab === 2 }"><a href="#news" ng-click="tab = 2">Actualités</a></li>
-                <li ng-class="{active:tab === 3 }"><a href="#calendrier" ng-click="tab = 3">Calendrier</a></li>
-                <li ng-class="{active:tab >= 6}" class="dropdown"><a>Le Club<span class="caret"></span></a>
+                <li ng-class="{active:isActive('/accueil') || tab === 1}"><a href="#accueil">Accueil</a></li>
+                <li ng-class="{active:isActive('/news')}"><a href="#news">Actualités</a></li>
+                <li ng-class="{active:isActive('/calendrier')}"><a href="#calendrier">Calendrier</a></li>
+                <li ng-class="{active:tabMenu >= 6}" class="dropdown"><a>Le Club<span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li ng-class="{active:tab === 6 }"><a ng-click="tab = 6" href="#horaires">Horaires</a></li>
-                        <li ng-class="{active:tab === 7 }"><a ng-click="tab = 7" href="#inscription">Inscription et Tarifs</a></li>
-                        <li ng-class="{active:tab === 8  }"><a ng-click="tab = 8" href="#historique">Historique</a></li>
-                        <li ng-class="{active:tab === 9  }"><a ng-click="tab = 9" href="#documents">Documents</a></li>
+                        <li ng-class="{active:isActive('/horaires')}" ng-click="tabMenu = 6"><a href="#horaires">Horaires</a></li>
+                        <li ng-class="{active:isActive('/inscription')}" ng-click="tabMenu = 6"><a href="#inscription">Inscription et Tarifs</a></li>
+                        <li ng-class="{active:isActive('/historique')}" ng-click="tabMenu = 6"><a href="#historique">Historique</a></li>
+                        <li ng-class="{active:isActive('/documents')}" ng-click="tabMenu = 6"><a href="#documents">Documents</a></li>
                     </ul>
                 </li>
 
-                <li ng-class="{active:tab === 4 }"><a href="#resultats" ng-click="tab = 4">Résultats</a></li>
-                <li ng-class="{active:tab === 5 }"><a href="#contact" ng-click="tab = 5">Contact</a></li>
-
+                <li ng-class="{active:isActive('/resultats')}"><a href="#resultats">Résultats</a></li>
+                <li ng-class="{active:isActive('/contact')}"><a href="#contact">Contact</a></li>
             </ul>
         </div>
         <!-- /.navbar-collapse -->
